Fix		Allow operations on tag columns in table, by decoupling thumbnail and name into separate columns. UI		file2 value assigning hidden by default. UI		Profile name outlined for visibility. Fix/UI		Thumbnail maximum height set to its width. Fix		Assign tags the 'tag' class, not 'user' class.

--- a/wangle-server/src/static/profile.css
+++ b/wangle-server/src/static/profile.css
@@ -298,11 +298,11 @@ body {
 
 #profile-name {
   margin-left: 24px;
-  margin-bottom: 24px;
-  font-size: 22px;
+  font-size: 24px;
   color: #fff;
   font-weight: 600;
   font-family: "DM Sans", sans-serif;
+  -webkit-text-stroke:1px black;
 }
 
 .box {
